data/derived/comb/progs/unify/prog5386.ml.out
Characters 29-66:
  let fixpoint (f,b) = wwhile ((f, (b, if f b == b then b else f b)),b);;
                               ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
Error: This expression has type 'a * 'b
       but an expression was expected of type 'c -> 'c * bool
